# campaigns

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  container.yml  package.yml  publish-pypi.yml  release.yml
docs/adr/: 0001-use-campaign-kernel-name.md  0002-capability-routing-over-provider-routing.md  0003-langgraph-runtime-only.md  0004-evaluator-before-execution.md  0005-immutable-receipts.md  0006-byok-credential-plane.md  0007-resource-manager-not-wallet.md  0008-defer-world-state-simulation-rl.md  README.md
docs/agentos/: 01-product-vision-product-thesis.md  02-system-philosophy.md  03-c4-context-diagram.md  04-c4-container-diagram.md  05-component-diagrams.md  06-campaign-kernel.md  07-capability-system.md  08-capability-contracts.md  09-planner.md  10-budget-engine.md  11-resource-manager.md  12-benchmark-intelligence.md  13-capability-router.md  14-credential-plane.md  15-provider-drivers.md  16-langgraph-runtime-integration.md  17-shared-memory.md  18-artifact-management.md  19-evaluation-bounded-self-improvement.md  20-receipts-provenance.md  21-dashboard-ux.md  22-hermes-client.md  23-mcp-integration.md  24-rest-grpc-apis.md  25-event-bus.md  26-database-schemas.md  27-distributed-systems-guarantees.md  28-security-model.md  29-observability.md  30-deployment.md  31-testing-strategy.md  32-roadmap.md  33-deferred-features.md  README.md
examples/: agentos-dogfood.yaml  revenue-growth.yaml
src/campaigns/: __init__.py  architecture.py  autorun.py  cli.py  cli_driver.py  compiler.py  dogfood.py  dogfood_exec.py  hermes_adapter.py  (+4 more)
tests/: test_agentos_architecture.py  test_agentos_dogfood.py  test_autorun.py  test_campaigns.py  test_dogfood_exec.py  test_goal_driven_loop.py  test_hermes_mcp.py  test_resource_manager.py  test_retrospective.py
(+7 files in other folders)
