[project]
name = "campaigns-os"
version = "0.1.0"
description = "Campaign primitives for autonomous organizations powered by AgentRL pods."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Campaigns Contributors" }]
maintainers = [{ name = "Junaid Ahmed" }]
keywords = ["agents", "agentic-ai", "campaigns", "swarm", "autonomous-organization", "agentrl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
agentrl = ["agentrl-os>=0.1.0"]
dev = ["pytest>=8.0", "build>=1.2.0", "twine>=5.0"]

[project.urls]
Homepage = "https://pypi.org/project/campaigns-os/"
Repository = "https://github.com/junaidahmed361/campaigns"
Issues = "https://github.com/junaidahmed361/campaigns/issues"
Documentation = "https://github.com/junaidahmed361/campaigns#readme"

[project.scripts]
campaigns = "campaigns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campaigns"]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/LICENSE", "/ARCHITECTURE.md", "/examples", "/src", "/tests", "/pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
